Changed Links and media files

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 .card-container .card-up {
     position: relative;
     background-position: center;
-    background-image: url(media/thedjzihan.png);
+    background-image: url(media/rizvi.png);
     background-size: cover;
     object-fit: cover;
     text-align: center;
