Changed social links

--- a/style.css
+++ b/style.css
@@ -187,8 +187,8 @@ body {
     color: #37548f !important;
 }
 .card-container .card-back a:nth-of-type(2) i:hover {
-    border-color: #1ccc5b !important;
-    color: #1ccc5b !important;
+    border-color: #8344b9 !important;
+    color: #8344b9 !important;
 }
 .card-container .card-back a:nth-of-type(3) i:hover {
     border-color: #0c0914 !important;
